; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hbffmpeg.c_hb_sws_get_colorspace.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hbffmpeg.c_hb_sws_get_colorspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWS_CS_DEFAULT = common dso_local global i32 0, align 4
@SWS_CS_ITU601 = common dso_local global i32 0, align 4
@SWS_CS_SMPTE240M = common dso_local global i32 0, align 4
@SWS_CS_ITU709 = common dso_local global i32 0, align 4
@SWS_CS_BT2020 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_sws_get_colorspace(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @SWS_CS_DEFAULT, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  switch i32 %5, label %14 [
    i32 129, label %6
    i32 128, label %8
    i32 130, label %10
    i32 132, label %12
    i32 131, label %12
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @SWS_CS_ITU601, align 4
  store i32 %7, i32* %3, align 4
  br label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @SWS_CS_SMPTE240M, align 4
  store i32 %9, i32* %3, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* @SWS_CS_ITU709, align 4
  store i32 %11, i32* %3, align 4
  br label %15

12:                                               ; preds = %1, %1
  %13 = load i32, i32* @SWS_CS_BT2020, align 4
  store i32 %13, i32* %3, align 4
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %12, %10, %8, %6
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
